<?xml version="1.0" encoding="utf-8"?><!--
  ~ © 2016-present FlowCrypt a.s. Limitations apply. Contact human@flowcrypt.com
  ~ Contributors: DenBond7
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutAtt"
    android:layout_width="match_parent"
    android:layout_height="@dimen/layout_height_attachment_item"
    android:layout_gravity="center"
    android:background="@drawable/bg_att"
    android:clickable="true"
    android:focusable="true">

    <LinearLayout
        android:id="@+id/actionButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/imageButtonPreviewAtt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/default_twice_dip"
            android:layout_marginEnd="@dimen/default_twice_dip"
            android:background="?android:attr/selectableItemBackground"
            android:contentDescription="@string/download"
            app:srcCompat="@drawable/ic_baseline_preview_grey_32dp" />

        <ImageButton
            android:id="@+id/imageButtonDownloadAtt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/default_twice_dip"
            android:layout_marginEnd="@dimen/default_twice_dip"
            android:background="?android:attr/selectableItemBackground"
            android:contentDescription="@string/download"
            app:srcCompat="@drawable/ic_file_download" />

        <ImageButton
            android:id="@+id/imageButtonDeleteAtt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/default_twice_dip"
            android:layout_marginEnd="@dimen/default_twice_dip"
            android:background="?android:attr/selectableItemBackground"
            android:contentDescription="@string/download"
            android:visibility="gone"
            app:srcCompat="@drawable/ic_clear"
            tools:visibility="visible" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageViewAttIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/attachment"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_attachment" />

    <TextView
        android:id="@+id/textViewAttachmentName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin_small"
        android:layout_marginEnd="@dimen/default_margin_small"
        android:ellipsize="middle"
        android:singleLine="true"
        app:layout_constraintEnd_toStartOf="@+id/actionButtons"
        app:layout_constraintStart_toEndOf="@+id/imageViewAttIcon"
        app:layout_constraintTop_toTopOf="@+id/actionButtons"
        tools:text="Some very very very very very very very very large file name.txt" />


    <TextView
        android:id="@+id/textViewAttSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/default_text_size_very_small"
        app:layout_constraintBottom_toBottomOf="@+id/actionButtons"
        app:layout_constraintStart_toStartOf="@+id/textViewAttachmentName"
        app:layout_constraintTop_toBottomOf="@+id/textViewAttachmentName"
        tools:text="12.02 Mb" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/default_margin_content" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/default_margin_content" />

</androidx.constraintlayout.widget.ConstraintLayout>
